# simpl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Test.sip  builtinModules.cpp  builtinModules.h  cfg.cpp  cfg.h  lexer.cpp  lexer.h  main.cpp  node.cpp  node.h  outs.cpp  outs.h  parser.cpp  parser.h  pch.h  set.cpp  set.h  simpl.bnf  utils.h
